tests/auto/corelib/kernel/qvariant/tst_qvariant.cpp
@@ -1275,7 +1275,7 @@ void tst_QVariant::operator_eq_eq_data()
     // Int
     QTest::newRow( "int1int1" ) << i1 << i1 << true;
     QTest::newRow( "int1int0" ) << i1 << i0 << false;
-    QTest::newRow( "nullint" ) << i0 << QVariant(QVariant::Int) << false;
+    QTest::newRow( "nullint" ) << i0 << QVariant(QVariant::Int) << true;
 
     // LongLong and ULongLong
     QVariant ll1( (qlonglong)1 );
@@ -1492,7 +1492,6 @@ void tst_QVariant::operator_eq_eq()
     QFETCH( QVariant, left );
     QFETCH( QVariant, right );
     QFETCH( bool, equal );
-    QEXPECT_FAIL("nullint", "See QTBUG-22933", Continue);
     QCOMPARE( left == right, equal );
 }
 
